--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 				<tr>
 					<th>
 						<div class="form-group">
-							<label>Name</label>
+							<label>User Name</label>
 							<input type="text" class="form-control" id="user_name" placeholder="Name" required />
 						</div>
 					</th>
